Bug 122767 - Artifacts from comment popup with OpenGL enabled
Summary: Artifacts from comment popup with OpenGL enabled
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords: bibisectRequest, regression
Depends on:
Blocks: Calc-Comments VCL-OpenGL
  Show dependency treegraph
 
Reported: 2019-01-16 18:59 UTC by Telesto
Modified: 2019-04-12 17:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screencast (77.41 KB, video/mp4)
2019-01-16 19:00 UTC, Telesto
Details
Example file (8.82 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-01-16 19:00 UTC, Telesto
Details
Rendering artifact happening without GL. (147.92 KB, image/png)
2019-04-08 10:12 UTC, Miklos Vajna
Details
Half-missing line with GL enabled. (152.65 KB, image/png)
2019-04-08 10:13 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2019-01-16 18:59:46 UTC
Description:
Artifacts after from comment popup

Steps to Reproduce:
1. Open the attached file
2. Hoover over the red comment dot
3. Move the mouse cursor somewhere else (contour of the comment box remains visible)

Actual Results:
Contour still visible

Expected Results:
Should disappear complete


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Version: 6.3.0.0.alpha0+
Build ID: 6740443311268b7d918bf4f43134d64fb78a0109
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-01-15_23:37:04
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Telesto 2019-01-16 19:00:04 UTC
Created attachment 148374 [details]
Screencast
Comment 2 Telesto 2019-01-16 19:00:25 UTC
Created attachment 148375 [details]
Example file
Comment 3 Durgapriyanka 2019-01-17 17:27:02 UTC
Thank you for reporting. I can not reproduce the bug, contour disappears completely.

Version: 6.3.0.0.alpha0+
Build ID: 3c964980da07892a02d5ac721d80558c459532d0
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-12-12_02:07:45
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 4 Aron Budea 2019-02-24 12:55:43 UTC
Likely a duplicate of bug 73287?
Comment 5 Telesto 2019-02-24 13:09:10 UTC
(In reply to Aron Budea from comment #4)
> Likely a duplicate of bug 73287?

Quite possible... The issue is the same.. However I can only reproduce it with OpenGL enabled... fine without.. 

Bug 73287 sounds like pre-OpenGL.. and is also lacking a sample file (didn't search the duplicates in extend, though....

Version: 6.3.0.0.alpha0+
Build ID: aa51774e6a309f277e71ca3a3b9d5d5b4b3dbf1a
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-02-18_06:06:03
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 6 Aron Budea 2019-02-24 21:53:24 UTC
Fair enough, this is actually a regression since 5.2, confirming it.

Adding bibisectRequest, but it might be tough, there were a bunch of OpenGL-related commits near release, and LO wasn't very stable sometimes.
Comment 7 Miklos Vajna 2019-04-08 10:12:14 UTC
Created attachment 150606 [details]
Rendering artifact happening without GL.

Interesting; so I can see the artifact with GL disabled as well (Windows, UI scaling is set to 125% on Windows); however I do see a somewhat missing line, part of the arrow that anchors the postit to the cell.
Comment 8 Miklos Vajna 2019-04-08 10:13:11 UTC
Created attachment 150607 [details]
Half-missing line with GL enabled.

This missing line is specific to GL, however.

I'll take a look at the missing line part.
Comment 9 Miklos Vajna 2019-04-09 09:28:20 UTC
Forget it, going back to 100% UI scaling allows reproducing the original problem where the invalidated area is too small when hiding the comment.
Comment 10 Commit Notification 2019-04-11 08:04:36 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/37aa4f0d64e276c46821ef6122483fb6b4c04781%5E%21

tdf#122767 sc opengl: fix rendering artifacts after hiding a cell comment

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2019-04-11 15:25:40 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/600fbb77a0869723dd00b6ec1643bac1be2e211c%5E%21

tdf#122767 sc opengl: fix rendering artifacts after hiding a cell comment

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Roman Kuznetsov 2019-04-12 17:13:44 UTC
verified in

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 74288f5af28de3d14044c951e7e5d62bb2e22301
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-04-12_00:11:21
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

Thank you, Miklos