tdf#122767 sc opengl: fix rendering artifacts after hiding a cell comment

Actually this is not specific to opengl, affects e.g. the Linux gen
backend as well, it just doesn't happen with the Windows gdi backend.

The rendering of the caption itself was OK. Focusing on the arrow
polygon at the end of the comment's "tail" (connector polyline):

- What gets painted is determined by SdrCaptionObj ->
  ViewContactOfSdrCaptionObj::createViewIndependentPrimitive2DSequence(),
  which produces a PolyPolygonColorPrimitive2D, which is then processed by
  VclPixelProcessor2D::tryDrawPolyPolygonColorPrimitive2DDirect().

- The polygon passed to VCL there is within the bounds of the
  invalidation rectangle set in ScNoteMarker::TimeHdl().

So it seems the only reason sometimes these 1px rendering artifacts are
left around is anti-aliasing. Fix those by simply extending the
invalidation rectangle in each direction.

Change-Id: I37b8e666999d3ff5ee1328fca7ac017ee8c7e9e0
Reviewed-on: https://gerrit.libreoffice.org/70584
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins